# rust_ui_framework

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.circleci/: config.yml
config/: default.toml  local.toml
scripts/: start_chromedriver.sh
src/: lib.rs  main.rs
src/config/: config.rs  default.toml
src/core/: driver.rs  driver_stub.rs  mod.rs
src/pages/: base_page.rs  login_page.rs  mod.rs
src/tests/: login_test.rs  mod.rs  test_base.rs
src/utils/: logger.rs
tests/: login_tests.rs  login_tests_local.rs
